Final commit before release 1.0! (Hopefully!)

--- a/assets/aether/lang/en_us.json
+++ b/assets/aether/lang/en_us.json
@@ -6,6 +6,7 @@
   "block.aether.locked_light_hellfire_stone": "Infernal Light Hellfire Stone",
   "block.aether.locked_sentry_stone": "Divine Sentry Stone",
   "block.aether.white_flower": "White Rose",
-  "block.aether.pink_aercloud": "Purple Aercloud"
+  "block.aether.pink_aercloud": "Purple Aercloud",
+  "block.aether.purple_flower": "Cloudbloom"
 
 }
