--- a/assets/aether/lang/en_us.json
+++ b/assets/aether/lang/en_us.json
@@ -1,17 +1,17 @@
 {
-  "aether.pro_tips.line.aether.golden_oak_amber": "Amberoot trees yield valuable Golden Amber in their logs.",
+  "aether.pro_tips.line.aether.golden_oak_amber": "Gilded Skyroot trees yield valuable Golden Amber in their logs.",
   "block.aether.locked_angelic_stone": "Ascended Angelic Stone",
   "block.aether.locked_carved_stone": "Divine Sentry Stone",
   "block.aether.locked_hellfire_stone": "Infernal Hellfire Stone",
   "block.aether.locked_light_angelic_stone": "Ascended Light Angelic Stone",
   "block.aether.locked_light_hellfire_stone": "Infernal Light Hellfire Stone",
   "block.aether.locked_sentry_stone": "Divine Runic Sentry Stone",
-  "block.aether.white_flower": "Cloudbloom",
-  "block.aether.purple_flower": "Icebloom",
-  "block.aether.golden_oak_leaves": "Amberoot Leaves",
-  "block.aether.golden_oak_log": "Amberoot Log",
-  "block.aether.golden_oak_sapling": "Amberoot Sapling",
-  "block.aether.golden_oak_wood": "Amberoot Wood",
+  "block.aether.white_flower": "White Rose",
+  "block.aether.purple_flower": "Aebloom",
+  "block.aether.golden_oak_leaves": "Gilded Skyroot Leaves",
+  "block.aether.golden_oak_log": "Gilded Skyroot Log",
+  "block.aether.golden_oak_sapling": "Gilded Skyroot Sapling",
+  "block.aether.golden_oak_wood": "Gilded Skyroot Wood",
   "block.aether.carved_slab": "Sentry Slab",
   "block.aether.carved_stairs": "Sentry Stairs",
   "block.aether.carved_stone": "Sentry Stone",
@@ -20,15 +20,20 @@
   "block.aether.trapped_sentry_stone": "Runic Sentry Stone Trap",
   "block.aether.sentry_stone": "Runic Sentry Stone",
   "block.aether.carved_stone": "Sentry Stone",
-  "item.aether.white_apple": "Gemfruit",
+  "item.aether.white_apple": "Crystalfruit",
   "item.aether.blue_berry": "Blueberry",
-  "item.aether.enchanted_berry": "Goldberry",
-  "lore.block.aether.golden_oak_leaves": "These golden Leaves generate with Amberoot trees. They spawn golden particles in a radius of 5 blocks. They yield Amberoot Saplings when decayed.",
-  "lore.block.aether.golden_oak_sapling": "These large saplings when planted will grow into huge Amberoot trees! You can use Bone Meal to speed up the process.",
-  "lore.item.aether.golden_amber": "These round golden orbs can be obtained by mining Amberoot Logs with a Gravitite Axe. Their main purpose is to craft Golden Darts, and Dart Shooters.",
-  "lore.item.aether.gravitite_axe": "Part of Aether's best tool tier, this Axe not only can make wood blocks float, but it can mine Amberoot logs for Golden Amber!",
+  "item.aether.enchanted_berry": "Enchanted Blueberry",
+  "item.aether.swet_ball": "Swet Jelly",
+  "lore.block.aether.golden_oak_leaves": "These golden Leaves generate with Gilded Skyroot trees. They spawn golden particles in a radius of 5 blocks. They yield Gilded Skyroot Saplings when decayed.",
+  "lore.block.aether.golden_oak_sapling": "These large saplings when planted will grow into huge Gilded Skyroot trees! You can use Bone Meal to speed up the process.",
+  "lore.item.aether.golden_amber": "These round golden orbs can be obtained by mining Gilded Skyroot Logs with a Gravitite Axe. Their main purpose is to craft Golden Darts, and Dart Shooters.",
+  "lore.item.aether.gravitite_axe": "Part of Aether's best tool tier, this Axe not only can make wood blocks float, but it can mine Gilded Skyroot logs for Golden Amber!",
   "lore.block.aether.carved_slab": "Crafted from Sentry Stone. Slabs are half blocks, versatile for decoration and smooth slopes. Try adding some to a building's roofing!",
   "lore.block.aether.carved_stairs": "Crafted from Sentry Stone. Stairs are useful for adding verticality to builds and are often used for decoration too!",
   "lore.block.aether.carved_wall": "Crafted from Sentry Stone. Can be used for decorative enclosures and defences. Great for keeping nasty intruders away!",
-  "lore.block.aether.sentry_stone": "The Light version of Sentry Stone, also found in Bronze Dungeons."
+  "lore.block.aether.sentry_stone": "The Light version of Sentry Stone, also found in Bronze Dungeons.",
+
+
+  "lore.item.deep_aether.goldenleaf_berries": "A berry from the quicksoil-inhabiting Brettl plant, these little red fruits are quite sweet.",
+  "gui.aether.slider.message.attack.invalid": "§7§oHmm. It's a rock-solid block. That doesn't seem to hurt it. Maybe I should use my pickaxe?§r"
 }
